--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,11 @@ avatar: https://raw.githubusercontent.com/DickinsonGrant/DickinsonGrant.github.i
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: gpdickin@calpoly.edu
   facebook:
   flickr:
   github: DickinsonGrant
-  instagram:
+  instagram: 
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
