--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@ avatar: https://raw.githubusercontent.com/DickinsonGrant/DickinsonGrant.github.i
 footer-links:
   dribbble:
   email: gpdickin@calpoly.edu
-  facebook:
+  facebook: grant.dickinson.142
   flickr:
   github: DickinsonGrant
   instagram: 
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: 
+  twitter: dickinsongrant5
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
